--- a/Todo/index.html
+++ b/Todo/index.html
@@ -6,6 +6,7 @@
     <script  src="App.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <title>To-Do App</title>
 </head>
@@ -19,6 +20,16 @@
                 <li v-for="things in thingsToDo"> <input type="checkbox" name="" id="checkbox" @click="">  {{things.things}} </li>
             </ul>
         </div>
+        <footer style="position: fixed;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        background-color:black;
+        color: white;
+        text-align: center;">
+            <p>เว็บไซต์นี้เป็นส่วนหนึ่งของการเรียนรู้การสร้าง Web Application ใน Learning Assignment รายวิชา GEN121</p>
+            <p>63130500060 ธีรภัทร อิฐอมรชัย</p>
+        </footer>
     </div>
 </body>
 </html>
